# getpass-masked

./: LICENSE  README.md  pyproject.toml
getpass_dots/: __init__.py  abstract_getpass.py  askpass.py  errors.py  unix_getpass.py  windows_getpass.py
tests/: test_getpass_dots.py
tests/getpass_dots/: test_askpass_pexpect.py  test_unix_getpass.py
